svg icons sizing issue on iOS + button default margins on safari issue are resolved

--- a/frontend/src/pages/general.sass
+++ b/frontend/src/pages/general.sass
@@ -30,6 +30,7 @@ body
 	border-color: gray
 	border-width: 2px
 	box-sizing: border-box
+	margin: 0
 	@if $reverse
 		background-image: linear-gradient($button2, $button1)
 	@else
